[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Versus.gd" type="Script" id=1]
[ext_resource path="res://entities/grid/Grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Roboto-Black.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Score_Number_Label.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/CameraShake2D.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.807843 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.396078, 0.831373, 1, 1 )

[node name="Versus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Connection Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 730.0
color = Color( 0, 0, 0, 1 )

[node name="Grid" parent="." instance=ExtResource( 2 )]
position = Vector2( 50, 177 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 131.0

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
margin_right = 480.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "Connecting..."
align = 1
valign = 1

[node name="VBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 480.0
margin_bottom = 131.0
alignment = 1

[node name="VBoxTimeContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer3"]
margin_right = 157.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Time_Label" type="Label" parent="VBoxContainer/VBoxContainer3/VBoxTimeContainer"]
margin_right = 157.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "Time"
align = 1
valign = 1

[node name="Time_Counter" type="Label" parent="VBoxContainer/VBoxContainer3/VBoxTimeContainer"]
margin_top = 45.0
margin_right = 157.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
text = "0:00"
align = 1
valign = 1

[node name="VBoxScoreContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer3"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Score_Label" type="Label" parent="VBoxContainer/VBoxContainer3/VBoxScoreContainer"]
margin_right = 157.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "Score"
align = 1
valign = 1

[node name="Score_Number_Label" parent="VBoxContainer/VBoxContainer3/VBoxScoreContainer" instance=ExtResource( 4 )]
margin_right = 157.0

[node name="VBoxEnemyContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer3"]
margin_left = 322.0
margin_right = 480.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Enemy_Label" type="Label" parent="VBoxContainer/VBoxContainer3/VBoxEnemyContainer"]
margin_right = 158.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "Enemy"
align = 1
valign = 1

[node name="Enemy_Score_Number_Label" parent="VBoxContainer/VBoxContainer3/VBoxEnemyContainer" instance=ExtResource( 4 )]
margin_right = 158.0

[node name="VictoryCenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="VictoryCenterContainer"]
margin_left = 60.0
margin_top = 180.0
margin_right = 420.0
margin_bottom = 540.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryCenterContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 355.0
rect_min_size = Vector2( 350, 350 )
custom_constants/separation = 10
alignment = 1

[node name="VictoryTitle" type="Label" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 350.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 3 )
text = "Neat."
align = 1

[node name="Label2" type="Label" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 350.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 3 )
text = "You Scored:"
align = 1

[node name="VictoryScoreLabel" type="Label" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 350.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 3 )
text = "Score"
align = 1

[node name="RetryButton" type="Button" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_left = 75.0
margin_top = 199.0
margin_right = 275.0
margin_bottom = 246.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
text = "Retry"

[node name="MainMenuButton" type="Button" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_left = 75.0
margin_top = 256.0
margin_right = 275.0
margin_bottom = 303.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
custom_constants/hseparation = 0
shortcut_in_tooltip = false
text = "Main Menu"

[node name="CameraShake2D" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="Connection Timer" to="." method="_on_BlitzTimer_timeout"]
[connection signal="explosive_pipe_destroyed" from="Grid" to="." method="_on_Grid_explosive_pipe_destroyed"]
[connection signal="pipes_destroyed" from="Grid" to="." method="_on_Grid_pipes_destroyed"]
[connection signal="pressed" from="VictoryCenterContainer/PanelContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="VictoryCenterContainer/PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
